--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,18 @@
 services:
-  # Redis 캐싱 레이어
-  redis:
-    image: redis:7-alpine
-    container_name: weather-data-platform-redis
-    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD:-weatherdata2024}
+  nginx:
+    image: nginx:1.27-alpine
+    container_name: weather-data-platform-nginx
     ports:
-      - "6379:6379"
+      - "80:80"
     volumes:
-      - redis_data:/data
+      - /Users/ijongseung/Downloads/weather-data-platform/docker/nginx.conf:/etc/nginx/nginx.conf:ro
+    command: ["/bin/sh", "-c", "rm -f /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"]
+    depends_on:
+      - frontend
+      - backend
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
+      test: ["CMD", "curl", "-f", "http://localhost/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -24,16 +26,16 @@ services:
     ports:
       - "8081:8081"
     volumes:
-      # NAS 마운트 경로를 컨테이너 내부로 마운트
-      # HOST_WEATHER_DATA_PATH 환경변수가 설정되어 있다면 해당 경로를 사용하고, 없으면 기본 공유 경로를 사용합니다.
       - ${HOST_WEATHER_DATA_PATH:-/Volumes/nas-weather-data}:/nas-weather-data:ro
     environment:
-      # 컨테이너 내부의 NAS 마운트 경로
       - WEATHER_DATA_PATH=/nas-weather-data
-      # Redis 연결 설정
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - REDIS_PASSWORD=${REDIS_PASSWORD:-weatherdata2024}
+      # CORS 설정: 외부 IP에서 접근할 수 있도록 허용
+      - ADDITIONAL_ORIGINS=${ADDITIONAL_ORIGINS:-http://192.9.66.137,http://192.9.66.137:80,http://192.9.66.137:8080}
+      # 개발 환경에서 모든 origin 허용이 필요하면 CORS_ALLOW_ALL=true 로 설정하세요
+      - CORS_ALLOW_ALL=${CORS_ALLOW_ALL:-false}
     depends_on:
       redis:
         condition: service_healthy
@@ -52,26 +54,29 @@ services:
       context: ..
       dockerfile: docker/frontend.Dockerfile
       args:
-        - NEXT_PUBLIC_API_BASE_URL=http://localhost
+        - NEXT_PUBLIC_API_BASE_URL=/api  # 👈 브라우저에서 nginx로 보냄
     ports:
       - "8080:3000"
     depends_on:
       - backend
     environment:
-      - NEXT_PUBLIC_API_BASE_URL=http://localhost
+      - NEXT_PUBLIC_API_BASE_URL=/api
     restart: unless-stopped
 
-  nginx:
-    image: nginx:1.27-alpine
-    container_name: weather-data-platform-nginx
+  redis:
+    image: redis:7-alpine
+    container_name: weather-data-platform-redis
+    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD:-weatherdata2024}
     ports:
-      - "80:80"
+      - "6379:6379"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - frontend
-      - backend
+      - redis_data:/data
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
 volumes:
   redis_data:
