--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,3 @@
-user  nginx;
 worker_processes  auto;
 
 error_log  /var/log/nginx/error.log warn;
@@ -14,6 +13,7 @@ http {
 
     sendfile        on;
     keepalive_timeout  65;
+    server_names_hash_bucket_size 64;
 
     upstream frontend_upstream {
         server frontend:3000;
@@ -24,12 +24,12 @@ http {
     }
 
     server {
-        listen 80;
+        listen 0.0.0.0:80;
         server_name _;
 
         client_max_body_size 50m;
 
-        location /api/ {
+        location ~ ^/(api|health) {
             proxy_pass http://backend_upstream;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
@@ -46,6 +46,10 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
+
+        gzip on;
+        gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+        gzip_min_length 256;
+        gzip_comp_level 5;
     }
 }
-
